--- a/FPGA/SKJEE1.sty
+++ b/FPGA/SKJEE1.sty
@@ -67,8 +67,8 @@
     <Property name="PROP_LST_NumCriticalPaths" value="3" time="0"/>
     <Property name="PROP_LST_OptimizeGoal" value="Timing" time="0"/>
     <Property name="PROP_LST_PropagatConst" value="True" time="0"/>
-    <Property name="PROP_LST_RAMStyle" value="Auto" time="0"/>
-    <Property name="PROP_LST_ROMStyle" value="Auto" time="0"/>
+    <Property name="PROP_LST_RAMStyle" value="Registers" time="0"/>
+    <Property name="PROP_LST_ROMStyle" value="Logic" time="0"/>
     <Property name="PROP_LST_RemoveDupRegs" value="True" time="0"/>
     <Property name="PROP_LST_ResolvedMixedDrivers" value="False" time="0"/>
     <Property name="PROP_LST_ResourceShare" value="True" time="0"/>
