--- a/FPGA/SKJEE1.sty
+++ b/FPGA/SKJEE1.sty
@@ -42,7 +42,7 @@
     <Property name="PROP_BIT_SysConBitGen" value="Reset" time="0"/>
     <Property name="PROP_BIT_WaitStTimBitGen" value="5" time="0"/>
     <Property name="PROP_IOTIMING_AllSpeed" value="False" time="0"/>
-    <Property name="PROP_LST_AllowDUPMod" value="False" time="0"/>
+    <Property name="PROP_LST_AllowDUPMod" value="True" time="0"/>
     <Property name="PROP_LST_CarryChain" value="True" time="0"/>
     <Property name="PROP_LST_CarryChainLength" value="0" time="0"/>
     <Property name="PROP_LST_CmdLineArgs" value="" time="0"/>
@@ -69,9 +69,9 @@
     <Property name="PROP_LST_PropagatConst" value="True" time="0"/>
     <Property name="PROP_LST_RAMStyle" value="Registers" time="0"/>
     <Property name="PROP_LST_ROMStyle" value="Logic" time="0"/>
-    <Property name="PROP_LST_RemoveDupRegs" value="True" time="0"/>
+    <Property name="PROP_LST_RemoveDupRegs" value="False" time="0"/>
     <Property name="PROP_LST_ResolvedMixedDrivers" value="False" time="0"/>
-    <Property name="PROP_LST_ResourceShare" value="True" time="0"/>
+    <Property name="PROP_LST_ResourceShare" value="False" time="0"/>
     <Property name="PROP_LST_UseIOReg" value="Auto" time="0"/>
     <Property name="PROP_LST_UseLPF" value="True" time="0"/>
     <Property name="PROP_LST_VHDL2008" value="False" time="0"/>
@@ -94,9 +94,9 @@
     <Property name="PROP_MAP_RegRetiming" value="False" time="0"/>
     <Property name="PROP_MAP_SigCrossRef" value="False" time="0"/>
     <Property name="PROP_MAP_SymCrossRef" value="False" time="0"/>
-    <Property name="PROP_MAP_TimingDriven" value="False" time="0"/>
-    <Property name="PROP_MAP_TimingDrivenNodeRep" value="False" time="0"/>
-    <Property name="PROP_MAP_TimingDrivenPack" value="False" time="0"/>
+    <Property name="PROP_MAP_TimingDriven" value="True" time="0"/>
+    <Property name="PROP_MAP_TimingDrivenNodeRep" value="True" time="0"/>
+    <Property name="PROP_MAP_TimingDrivenPack" value="True" time="0"/>
     <Property name="PROP_PARSTA_AnalysisOption" value="Standard Setup and Hold Analysis" time="0"/>
     <Property name="PROP_PARSTA_AutoTiming" value="True" time="0"/>
     <Property name="PROP_PARSTA_CheckUnconstrainedConns" value="False" time="0"/>
@@ -117,7 +117,7 @@
     <Property name="PROP_PAR_PARModArgs" value="" time="0"/>
     <Property name="PROP_PAR_ParMultiNodeList" value="" time="0"/>
     <Property name="PROP_PAR_ParRunPlaceOnly" value="False" time="0"/>
-    <Property name="PROP_PAR_PlcIterParDes" value="1" time="0"/>
+    <Property name="PROP_PAR_PlcIterParDes" value="2" time="0"/>
     <Property name="PROP_PAR_PlcStCostTblParDes" value="1" time="0"/>
     <Property name="PROP_PAR_PrefErrorOut" value="True" time="0"/>
     <Property name="PROP_PAR_RemoveDir" value="True" time="0"/>
@@ -129,9 +129,9 @@
     <Property name="PROP_PAR_RunParWithTrce" value="False" time="0"/>
     <Property name="PROP_PAR_RunTimeReduction" value="True" time="0"/>
     <Property name="PROP_PAR_SaveBestRsltParDes" value="1" time="0"/>
-    <Property name="PROP_PAR_StopZero" value="False" time="0"/>
+    <Property name="PROP_PAR_StopZero" value="True" time="0"/>
     <Property name="PROP_PAR_parHold" value="On" time="0"/>
-    <Property name="PROP_PAR_parPathBased" value="Off" time="0"/>
+    <Property name="PROP_PAR_parPathBased" value="On" time="0"/>
     <Property name="PROP_PRE_CmdLineArgs" value="" time="0"/>
     <Property name="PROP_PRE_EdfArrayBoundsCase" value="False" time="0"/>
     <Property name="PROP_PRE_EdfAutoResOfRam" value="False" time="0"/>
